# manga-image-translator

./: pyproject.toml
manga_translator/: __main__.py
