[project]
name = "manga-image-translator"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.10, <3.12"
license = "GPL-3.0-only"
dependencies = [
    "accelerate>=1.7.0",
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.18",
    "aioshutil>=1.5",
    "arabic-reshaper>=3.0.0",
    "backports-cached-property>=1.0.2",
    "bitsandbytes>=0.45.5",
    "colorama>=0.4.6",
    "cryptography>=44.0.3",
    "ctranslate2<=3.24.0",
    "cython>=3.1.0",
    "deepl>=1.22.0",
    "editdistance>=0.8.1",
    "einops>=0.8.1",
    "fastapi>=0.115.12",
    "freetype-py>=2.5.1",
    "google-genai>=1.2.0",
    "groq>=0.24.0",
    "httpx==0.27.2",
    "huggingface-hub>=0.31.2",
    "imagehash>=4.3.2",
    "kornia>=0.8.1",
    "langcodes>=3.5.0",
    "langdetect>=1.0.9",
    "manga-ocr>=0.1.14",
    "marshmallow>=4.0.0",
    "nest-asyncio>=1.6.0",
    "networkx>=3.4.2",
    "numpy==1.26.4",
    "omegaconf>=2.3.0",
    "onnxruntime>=1.22.0",
    "open-clip-torch>=2.32.0",
    "openai==1.63.0",
    "opencv-python>=4.11.0.86",
    "paddleocr>=2.10.0",
    "paddlepaddle>=3.0.0",
    "paddlepaddle-gpu>=2.6.2 ; sys_platform != 'darwin'",
    "pandas>=2.2.3",
    "protobuf>=3.20.2,<6.0.0",
    "py3langid==0.2.2",
    "pyclipper>=1.3.0.post6",
    "pydantic==2.5.0",
    "pydensecrf",
    "pyhyphen>=4.0.4",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "regex>=2024.11.6",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "safetensors>=0.5.3",
    "scikit-image>=0.25.2",
    "sentencepiece>=0.2.0",
    "shapely>=2.1.0",
    "tensorboardx>=2.6.2.2",
    "tiktoken>=0.9.0",
    "timm>=1.0.15",
    "torch>=2.7.0",
    "torch-summary>=1.4.5",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
    "uvicorn>=0.34.2",
    "websockets>=14.2",
]

[tool.isort]
profile = 'black'
multi_line_output = 3
line_length = 100
py_version = 310


[tool.pylint]
disable = """
C,R,W,
c-extension-no-member
"""
additional-builtins = "display"
output-format = "colorized"
generated-members = ["torch.*", "cv2.*"]

[tool.pytest.ini_options]
addopts = "-ra -v -p no:faulthandler"
minversion = "6.0"
testpaths = ["test"]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
pydensecrf = { url = "https://github.com/lucasb-eyer/pydensecrf/archive/refs/heads/master.zip" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
